[gd_scene load_steps=7 format=3 uid="uid://g8toy18n83pn"]

[ext_resource type="Script" uid="uid://eiyk6dht3wut" path="res://arrow.gd" id="1_uynht"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8e2im"]
radius = 37.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uynht"]
radius = 32.0156

[sub_resource type="Animation" id="Animation_uynht"]
resource_name = "new_animation"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.566667, -0.00410658, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.5, 0.0270933, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_8e2im"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hp5o0"]
_data = {
&"RESET": SubResource("Animation_8e2im"),
&"new_animation": SubResource("Animation_uynht")
}

[node name="arrow" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_uynht")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8e2im")

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(0.91, 0.91)
polygon = PackedVector2Array(0, -11, 0, -26, 28, 0, 0, 23, 0, 10, -70, 10, -70, -11)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(48, 2)
shape = SubResource("CircleShape2D_uynht")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hp5o0")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
